# sift

./: .gitignore  README.md  TODO.md  output.txt  run_log_2026-01-31.txt
.github/workflows/: daily-newsletter.yml
backend/: dump_report_state.py  pyproject.toml  run_tests.py
backend/sift/: __init__.py  __main__.py  cli.py  config.py  db.py  embed_worker.py  gemini_client.py  newsletter_style.py  seed_data.py
backend/sift.egg-info/: PKG-INFO  SOURCES.txt
backend/sift/analyze/: pain_score.py  runner.py  scoring.py
backend/sift/fixtures/: sample_newsletter_data.json
backend/sift/ingest/: hn.py  reddit_apify.py  reddit_ingest.py  rss_ingest.py  runner.py
backend/sift/run/: __init__.py  render_sample.py  runner.py
backend/tests/: __init__.py  test_catalyst_gating.py  test_classify.py  test_dedupe.py  test_golden.py  test_scoring.py  test_startup_grade.py  test_topic_coherence.py  test_wedge.py
backend/unmet/: __init__.py  __main__.py  cli.py  config.py  db.py  embed_worker.py  gemini_client.py  newsletter_style.py
backend/unmet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/unmet/analyze/: __init__.py  clustering.py  evidence_snippets.py  pain_score.py  runner.py  scoring.py  topic_coherence.py
backend/unmet/fixtures/: __init__.py
backend/unmet/ingest/: __init__.py  hn.py  hn.py.bak  reddit_ingest.py  runner.py
backend/unmet/run/: __init__.py  render_sample.py  runner.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AboutVisual.tsx  (+11 more)
supabase/: seed.sql
(+14 files in other folders)
