[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sift"
version = "0.1.0"
description = "Sift newsletter pipeline"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.1",
    "google-generativeai>=0.8",
    "praw>=7.7",
    "apify-client>=1.6",
    "feedparser>=6.0",
    "httpx>=0.27",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["sift*"]

[tool.ruff]
line-length = 100
target-version = "py311"
